마크업 기초파일 추가

--- a/www/cl.html
+++ b/www/cl.html
@@ -298,20 +298,70 @@
                 <tr>
                   <td></td>
                   <td class="cl-table-td00">문화공감</td>
-                  <td class="cl-table-td01"></td>
+                  <td class="cl-table-td01">문화TV</td>
                   <td class="cl-table-td02"></td>
                   <td class="cl-table-td03"></td>
                   <td class="cl-table-td04"></td>
-                  <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11200">DI-11200</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="sympathy/di12220_01.html">
+                  <td class="cl-table-td-name cl-table-td05" data-page-name=""></td>
+                  <td class="cl-table-td-path cl-table-td06" data-page-path="culturetv/mainList.html">
                     <div class="path-btn-area">
-                      <a href="./html/sympathy/di12220_01.html">[열림]</a>
-                      <a href="./html/sympathy/di12220_01.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/sympathy/di12220_01.html">[Preview]</a>
+                      <a href="./html/culturetv/mainList.html">[열림]</a>
+                      <a href="./html/culturetv/mainList.html" target="_blank">[새창열림]</a>
+                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/culturetv/mainList.html">[Preview]</a>
                       <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
                     </div>
                     <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/sympathy/di12220_01.html</div>
+                      <div class="path-txt-area">html/culturetv/mainList.html</div>
+                    </div>
+                  </td>
+                  <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
+                  <td class="ui--page-status cl-table-td-status cl-table-td08" data-page-Status=""></td>
+                  <td class="cl-table-td09">
+                    <div></div>
+                  </td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td class="cl-table-td00"></td>
+                  <td class="cl-table-td01"></td>
+                  <td class="cl-table-td02">한국문화100</td>
+                  <td class="cl-table-td03"></td>
+                  <td class="cl-table-td04"></td>
+                  <td class="cl-table-td-name cl-table-td05" data-page-name=""></td>
+                  <td class="cl-table-td-path cl-table-td06" data-page-path="culturetv/culture100List.html">
+                    <div class="path-btn-area">
+                      <a href="./html/culturetv/culture100List.html">[열림]</a>
+                      <a href="./html/culturetv/culture100List.html" target="_blank">[새창열림]</a>
+                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/culturetv/culture100List.html">[Preview]</a>
+                      <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
+                    </div>
+                    <div class="path-txt-wrap">
+                      <div class="path-txt-area">html/culturetv/culture100List.html</div>
+                    </div>
+                  </td>
+                  <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
+                  <td class="ui--page-status cl-table-td-status cl-table-td08" data-page-Status=""></td>
+                  <td class="cl-table-td09">
+                    <div></div>
+                  </td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td class="cl-table-td00"></td>
+                  <td class="cl-table-td01">공감리포트</td>
+                  <td class="cl-table-td02"></td>
+                  <td class="cl-table-td03"></td>
+                  <td class="cl-table-td04"></td>
+                  <td class="cl-table-td-name cl-table-td05" data-page-name=""></td>
+                  <td class="cl-table-td-path cl-table-td06" data-page-path="culturetv/themeList.html">
+                    <div class="path-btn-area">
+                      <a href="./html/culturetv/themeList.html">[열림]</a>
+                      <a href="./html/culturetv/themeList.html" target="_blank">[새창열림]</a>
+                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/culturetv/themeList.html">[Preview]</a>
+                      <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
+                    </div>
+                    <div class="path-txt-wrap">
+                      <div class="path-txt-area">html/culturetv/themeList.html</div>
                     </div>
                   </td>
                   <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
