--- a/www/html/culturetv/themeList.html
+++ b/www/html/culturetv/themeList.html
@@ -59,7 +59,8 @@
 <body>
   <!--[if lte IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p><![endif]-->
   <div id="wrap">
-    <!-- s: header include--><!--#include virtual="/html/include/header.html" -->
+    <!-- s: header include-->
+    <!--#include virtual="/html/include/header.html" -->
     <!-- e: header include-->
     <div class="pageClassSub" id="container">
       <div id="content" role="main">
@@ -117,7 +118,8 @@
         </div>
       </div>
     </div>
-    <!-- s: footer include--><!--#include virtual="/html/include/footer.html" -->
+    <!-- s: footer include-->
+    <!--#include virtual="/html/include/footer.html" -->
     <!-- e: footer include-->
   </div>
   <div class="dimm">
