코딩리스트, 파일명 수정

--- a/www/cl.html
+++ b/www/cl.html
@@ -72,69 +72,19 @@
                   <td></td>
                   <td class="cl-table-td00">문화체험</td>
                   <td class="cl-table-td01">집콕+집밖 문화생활</td>
-                  <td class="cl-table-td02">tab 1</td>
+                  <td class="cl-table-td02"></td>
                   <td class="cl-table-td03"></td>
                   <td class="cl-table-td04"></td>
                   <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11100">DI-11100</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="portal/di11100_01.html">
+                  <td class="cl-table-td-path cl-table-td06" data-page-path="home/index.html">
                     <div class="path-btn-area">
-                      <a href="./html/portal/di11100_01.html">[열림]</a>
-                      <a href="./html/portal/di11100_01.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/portal/di11100_01.html">[Preview]</a>
+                      <a href="./html/home/index.html">[열림]</a>
+                      <a href="./html/home/index.html" target="_blank">[새창열림]</a>
+                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/home/index.html">[Preview]</a>
                       <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
                     </div>
                     <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/portal/di11100_01.html</div>
-                    </div>
-                  </td>
-                  <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
-                  <td class="ui--page-status cl-table-td-status cl-table-td08" data-page-Status=""></td>
-                  <td class="cl-table-td09">
-                    <div></div>
-                  </td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td class="cl-table-td00"></td>
-                  <td class="cl-table-td01"></td>
-                  <td class="cl-table-td02">tab 2</td>
-                  <td class="cl-table-td03"></td>
-                  <td class="cl-table-td04"></td>
-                  <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11100">DI-11100</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="portal/di11100_02.html">
-                    <div class="path-btn-area">
-                      <a href="./html/portal/di11100_02.html">[열림]</a>
-                      <a href="./html/portal/di11100_02.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/portal/di11100_02.html">[Preview]</a>
-                      <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
-                    </div>
-                    <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/portal/di11100_02.html</div>
-                    </div>
-                  </td>
-                  <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
-                  <td class="ui--page-status cl-table-td-status cl-table-td08" data-page-Status=""></td>
-                  <td class="cl-table-td09">
-                    <div></div>
-                  </td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td class="cl-table-td00"></td>
-                  <td class="cl-table-td01"></td>
-                  <td class="cl-table-td02">tab 3</td>
-                  <td class="cl-table-td03"></td>
-                  <td class="cl-table-td04"></td>
-                  <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11100">DI-11100</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="portal/di11100_03.html">
-                    <div class="path-btn-area">
-                      <a href="./html/portal/di11100_03.html">[열림]</a>
-                      <a href="./html/portal/di11100_03.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/portal/di11100_03.html">[Preview]</a>
-                      <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
-                    </div>
-                    <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/portal/di11100_03.html</div>
+                      <div class="path-txt-area">html/home/index.html</div>
                     </div>
                   </td>
                   <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
@@ -147,69 +97,19 @@
                   <td></td>
                   <td class="cl-table-td00"></td>
                   <td class="cl-table-td01">한눈에 보는 문화정보</td>
-                  <td class="cl-table-td02">type01</td>
+                  <td class="cl-table-td02"></td>
                   <td class="cl-table-td03"></td>
                   <td class="cl-table-td04"></td>
                   <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11200">DI-11200</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="portal/di11200_01.html">
+                  <td class="cl-table-td-path cl-table-td06" data-page-path="oneeye/oneEyeList.html">
                     <div class="path-btn-area">
-                      <a href="./html/portal/di11200_01.html">[열림]</a>
-                      <a href="./html/portal/di11200_01.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/portal/di11200_01.html">[Preview]</a>
+                      <a href="./html/oneeye/oneEyeList.html">[열림]</a>
+                      <a href="./html/oneeye/oneEyeList.html" target="_blank">[새창열림]</a>
+                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/oneeye/oneEyeList.html">[Preview]</a>
                       <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
                     </div>
                     <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/portal/di11200_01.html</div>
-                    </div>
-                  </td>
-                  <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
-                  <td class="ui--page-status cl-table-td-status cl-table-td08" data-page-Status=""></td>
-                  <td class="cl-table-td09">
-                    <div></div>
-                  </td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td class="cl-table-td00"></td>
-                  <td class="cl-table-td01"></td>
-                  <td class="cl-table-td02">type02</td>
-                  <td class="cl-table-td03"></td>
-                  <td class="cl-table-td04"></td>
-                  <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11200">DI-11200</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="portal/di11200_03.html">
-                    <div class="path-btn-area">
-                      <a href="./html/portal/di11200_03.html">[열림]</a>
-                      <a href="./html/portal/di11200_03.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/portal/di11200_03.html">[Preview]</a>
-                      <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
-                    </div>
-                    <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/portal/di11200_03.html</div>
-                    </div>
-                  </td>
-                  <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
-                  <td class="ui--page-status cl-table-td-status cl-table-td08" data-page-Status=""></td>
-                  <td class="cl-table-td09">
-                    <div></div>
-                  </td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td class="cl-table-td00"></td>
-                  <td class="cl-table-td01"></td>
-                  <td class="cl-table-td02">type03</td>
-                  <td class="cl-table-td03"></td>
-                  <td class="cl-table-td04"></td>
-                  <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11200">DI-11200</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="portal/di11200_03.html">
-                    <div class="path-btn-area">
-                      <a href="./html/portal/di11200_03.html">[열림]</a>
-                      <a href="./html/portal/di11200_03.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/portal/di11200_03.html">[Preview]</a>
-                      <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
-                    </div>
-                    <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/portal/di11200_03.html</div>
+                      <div class="path-txt-area">html/oneeye/oneEyeList.html</div>
                     </div>
                   </td>
                   <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
@@ -226,15 +126,15 @@
                   <td class="cl-table-td03"></td>
                   <td class="cl-table-td04"></td>
                   <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11300">DI-11300</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="portal/di11300_01.html">
+                  <td class="cl-table-td-path cl-table-td06" data-page-path="perform/relayList.html">
                     <div class="path-btn-area">
-                      <a href="./html/portal/di11300_01.html">[열림]</a>
-                      <a href="./html/portal/di11300_01.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/portal/di11300_01.html">[Preview]</a>
+                      <a href="./html/perform/relayList.html">[열림]</a>
+                      <a href="./html/perform/relayList.html" target="_blank">[새창열림]</a>
+                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/perform/relayList.html">[Preview]</a>
                       <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
                     </div>
                     <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/portal/di11300_01.html</div>
+                      <div class="path-txt-area">html/perform/relayList.html</div>
                     </div>
                   </td>
                   <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
@@ -251,15 +151,15 @@
                   <td class="cl-table-td03"></td>
                   <td class="cl-table-td04"></td>
                   <td class="cl-table-td-name cl-table-td05" data-page-name="DI-11500">DI-11500</td>
-                  <td class="cl-table-td-path cl-table-td06" data-page-path="portal/di11500_01.html">
+                  <td class="cl-table-td-path cl-table-td06" data-page-path="space/facility.html">
                     <div class="path-btn-area">
-                      <a href="./html/portal/di11500_01.html">[열림]</a>
-                      <a href="./html/portal/di11500_01.html" target="_blank">[새창열림]</a>
-                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/portal/di11500_01.html">[Preview]</a>
+                      <a href="./html/space/facility.html">[열림]</a>
+                      <a href="./html/space/facility.html" target="_blank">[새창열림]</a>
+                      <a class="ui--preview-mode" role="button" data-preview-mode-txt="html/space/facility.html">[Preview]</a>
                       <!--a(href=outLink+htmlPath+col target="_blank") [uxdev]-->
                     </div>
                     <div class="path-txt-wrap">
-                      <div class="path-txt-area">html/portal/di11500_01.html</div>
+                      <div class="path-txt-area">html/space/facility.html</div>
                     </div>
                   </td>
                   <td class="cl-table-td-complete cl-table-td07" data-page-complete=""></td>
