--- a/www/html/culturetv/mainList.html
+++ b/www/html/culturetv/mainList.html
@@ -62,7 +62,82 @@
     <!-- s: header include--><!--#include virtual="/html/include/header.html" -->
     <!-- e: header include-->
     <div class="pageClassSub" id="container">
-      <div id="content" role="main">컨텐츠 시작</div>
+      <div id="content" role="main">
+        <div class="content-inner">
+          <section class="visual-top">
+            <div class="section-inner">
+              <div class="visual-area type-row">
+                <div class="visual-content-box">
+                  <div class="video">비디오 컨텐츠 영역</div>
+                </div>
+                <div class="visual-text-box">
+                  <strong class="category">문화유산</strong>
+                  <h3 class="title-h3">[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링</h3>
+                  <p class="sub-txt">[기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...</p>
+                </div>
+              </div>
+              <div class="thumbnail-area swiper-container">
+                <ul class="thumbnail-list swiper-wrapper">
+                  <li class="swiper-slide">
+                    <button type="button">
+                      <span class="thumb-img">
+                        <img src="" alt="">
+                      </span>
+                      <strong class="sub-category">공연/전시</strong>
+                      <p class="txt">[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링</p>
+                    </button>
+                  </li>
+                  <li class="swiper-slide">
+                    <button type="button">
+                      <span class="thumb-img">
+                        <img src="" alt="">
+                      </span>
+                      <strong class="sub-category">공연/전시</strong>
+                      <p class="txt">[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2</p>
+                    </button>
+                  </li>
+                  <li class="swiper-slide">
+                    <button type="button">
+                      <span class="thumb-img">
+                        <img src="" alt="">
+                      </span>
+                      <strong class="sub-category">공연/전시</strong>
+                      <p class="txt">[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3</p>
+                    </button>
+                  </li>
+                  <li class="swiper-slide">
+                    <button type="button">
+                      <span class="thumb-img">
+                        <img src="" alt="">
+                      </span>
+                      <strong class="sub-category">공연/전시</strong>
+                      <p class="txt">[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4</p>
+                    </button>
+                  </li>
+                  <li class="swiper-slide">
+                    <button type="button">
+                      <span class="thumb-img">
+                        <img src="" alt="">
+                      </span>
+                      <strong class="sub-category">공연/전시</strong>
+                      <p class="txt">[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5</p>
+                    </button>
+                  </li>
+                  <li class="swiper-slide">
+                    <button type="button">
+                      <span class="thumb-img">
+                        <img src="" alt="">
+                      </span>
+                      <strong class="sub-category">공연/전시</strong>
+                      <p class="txt">[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링6</p>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
     </div>
     <!-- s: footer include--><!--#include virtual="/html/include/footer.html" -->
     <!-- e: footer include-->
