oneEye.scss, _kya.scss 생성

--- a/www/html/oneeye/oneEyeList.html
+++ b/www/html/oneeye/oneEyeList.html
@@ -49,6 +49,7 @@
   <link href="/css_partials/componentlist.css" type="text/css" rel="stylesheet">
   <link href="/css_partials/header.css" type="text/css" rel="stylesheet">
   <link href="/css_partials/footer.css" type="text/css" rel="stylesheet">
+  <link href="/css/oneEye.css" type="text/css" rel="stylesheet">
   <script src="/js/jquery.js"></script>
   <script src="/js/gsap.min.js"></script>
   <script src="/js/swiper.min.5.4.5.js"></script>
@@ -59,7 +60,8 @@
 <body>
   <!--[if lte IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p><![endif]-->
   <div id="wrap">
-    <!-- s: header include--><!--#include virtual="/html/include/header.html" -->
+    <!-- s: header include-->
+    <!--#include virtual="/html/include/header.html" -->
     <!-- e: header include-->
     <div class="pageClassSub" id="container">
       <div id="content" role="main">
@@ -71,13 +73,10 @@
                   <a href="#">홈</a>
                 </li>
                 <li>
-                  <a href="#">문화공감</a>
+                  <a href="#">문화체험</a>
                 </li>
                 <li>
-                  <a href="#">문화TV</a>
-                </li>
-                <li>
-                  <a class="on" href="#">공감리포트111111111111</a>
+                  <a class="on" href="#">집콕+집밖 문화생활</a>
                 </li>
               </ol>
             </div>
@@ -117,7 +116,8 @@
         </div>
       </div>
     </div>
-    <!-- s: footer include--><!--#include virtual="/html/include/footer.html" -->
+    <!-- s: footer include-->
+    <!--#include virtual="/html/include/footer.html" -->
     <!-- e: footer include-->
   </div>
   <div class="dimm">
