--- a/www/html/home/index.html
+++ b/www/html/home/index.html
@@ -49,6 +49,7 @@
   <link href="/css_partials/componentlist.css" type="text/css" rel="stylesheet">
   <link href="/css_partials/header.css" type="text/css" rel="stylesheet">
   <link href="/css_partials/footer.css" type="text/css" rel="stylesheet">
+  <link href="/css/oneEye.css" type="text/css" rel="stylesheet">
   <script src="/js/jquery.js"></script>
   <script src="/js/gsap.min.js"></script>
   <script src="/js/swiper.min.5.4.5.js"></script>
@@ -72,13 +73,10 @@
                   <a href="#">홈</a>
                 </li>
                 <li>
-                  <a href="#">문화공감</a>
+                  <a href="#">문화체험</a>
                 </li>
                 <li>
-                  <a href="#">문화TV</a>
-                </li>
-                <li>
-                  <a class="on" href="#">공감리포트</a>
+                  <a class="on" href="#">집콕+집밖 문화생활</a>
                 </li>
               </ol>
             </div>
@@ -93,24 +91,276 @@
               </ul>
             </div>
           </nav>
-          <section class="visual-top">
+          <section class="intro-home">
+            <span class="hide-txt">일상문화의 시대, 공연/전시/축제 등 다채로운 문화정보를 찾아보세요.</span>
+            <h1 class="hide-txt">집콕+집밖 문화생활</h1>
+          </section>
+          <section class="main-home">
             <div class="section-inner">
               <div class="title-area">
-                <h1 class="title-h1">
-                  한눈에 보는 문화정보<span class="txt">일상문화의 시대, 공연/전시/축제 등 다채로운 문화정보를 찾아보세요.</span>
-                </h1>
+                <h2 class="title-h2">오늘의 집콕+집밖</h2>
               </div>
-              <div class="visual-area">
-                <div class="visual-content-box">
-                  <div class="video">비디오 컨텐츠 영역</div>
-                </div>
-                <div class="visual-text-box">
-                  <h3 class="title-h3">[정부위원회 246개 통폐합···40% 가까이 정비 [뉴스의 맥]</h3>
-                  <p class="sub-txt">김용민 앵커 > 앞서 국무회의 소식 전해드렸는데요. 국무회의 주요 안건을 취재기자와 자세히 알아보겠습니다. 임소형 기자 나와있습니다. 윤 대통령이 정부세종청사에서 국무회의를 주재한 건 이번이 두 번째였는데요. 어떤 안건들이 다뤄졌습니까. …</p>
-                  <dl class="info">
-                    <dt>출처</dt>
-                    <dd>한국정책방송원</dd>
-                  </dl>
+              <div class="slide-area">
+                <div class="main-home-swiper">
+                  <div class="swiper-container">
+                    <ul class="swiper-wrapper">
+                      <li class="swiper-slide">
+                        <a href="#none">
+                          <div class="box-thumb">
+                            <img class="thumb-img" src="https://placeimg.com/290/413/nature" alt="">
+                            <div class="thumb-category">
+                              <i class="ico-housein">
+                                <span class="hide-txt">집콕</span>
+                              </i>
+                            </div>
+                            <div class="thumb-btn">
+                              <span class="txt">예매 바로가기</span>
+                            </div>
+                          </div>
+                          <div class="box-tag">
+                            <div class="tag type01">
+                              <span class="txt">공연/전시</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">연극</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">유료</span>
+                            </div>
+                          </div>
+                          <div class="box-txt">
+                            <strong class="txt-tit">지원의 음악과 미술이 함께하는 콘서트</strong>
+                            <p class="txt-desc">무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의</p>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="swiper-slide">
+                        <a href="#none">
+                          <div class="box-thumb">
+                            <img class="thumb-img" src="https://placeimg.com/290/413/nature" alt="">
+                            <div class="thumb-category">
+                              <i class="ico-houseout">
+                                <span class="hide-txt">집밖</span>
+                              </i>
+                            </div>
+                            <div class="thumb-btn">
+                              <span class="txt">예매 바로가기</span>
+                            </div>
+                          </div>
+                          <div class="box-tag">
+                            <div class="tag type01">
+                              <span class="txt">공연/전시</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">연극</span>
+                            </div>
+                          </div>
+                          <div class="box-txt">
+                            <strong class="txt-tit">춤추는 DNA</strong>
+                            <p class="txt-desc"></p>
+                            <dl class="txt-data">
+                              <dt class="data-term">기간 </dt>
+                              <dd class="data-desc">2022.09.21~ 2022.09.25</dd>
+                              <dt class="data-term">문의</dt>
+                              <dd class="data-desc">02-360-866</dd>
+                            </dl>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="swiper-slide">
+                        <a href="#none">
+                          <div class="box-thumb">
+                            <img class="thumb-img" src="https://placeimg.com/290/413/nature" alt="">
+                            <div class="thumb-category">
+                              <i class="ico-housein">
+                                <span class="hide-txt">집콕</span>
+                              </i>
+                            </div>
+                            <div class="thumb-btn">
+                              <span class="txt">예매 바로가기</span>
+                            </div>
+                          </div>
+                          <div class="box-tag">
+                            <div class="tag type01">
+                              <span class="txt">공연/전시</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">연극</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">유료</span>
+                            </div>
+                          </div>
+                          <div class="box-txt">
+                            <strong class="txt-tit">지원의 음악과 미술이 함께하는 콘서트</strong>
+                            <p class="txt-desc">무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의</p>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="swiper-slide">
+                        <a href="#none">
+                          <div class="box-thumb">
+                            <img class="thumb-img" src="https://placeimg.com/290/413/nature" alt="">
+                            <div class="thumb-category">
+                              <i class="ico-houseout">
+                                <span class="hide-txt">집밖</span>
+                              </i>
+                            </div>
+                            <div class="thumb-btn">
+                              <span class="txt">예매 바로가기</span>
+                            </div>
+                          </div>
+                          <div class="box-tag">
+                            <div class="tag type01">
+                              <span class="txt">공연/전시</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">연극</span>
+                            </div>
+                          </div>
+                          <div class="box-txt">
+                            <strong class="txt-tit">지원의 음악과 미술이 함께하는 콘서트</strong>
+                            <p class="txt-desc"></p>
+                            <dl class="txt-data">
+                              <dt class="data-term">기간 </dt>
+                              <dd class="data-desc">2022.09.21~ 2022.09.25</dd>
+                              <dt class="data-term">문의</dt>
+                              <dd class="data-desc">02-360-866</dd>
+                            </dl>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="swiper-slide">
+                        <a href="#none">
+                          <div class="box-thumb">
+                            <img class="thumb-img" src="https://placeimg.com/290/413/nature" alt="">
+                            <div class="thumb-category">
+                              <i class="ico-housein">
+                                <span class="hide-txt">집콕</span>
+                              </i>
+                            </div>
+                            <div class="thumb-btn">
+                              <span class="txt">예매 바로가기</span>
+                            </div>
+                          </div>
+                          <div class="box-tag">
+                            <div class="tag type01">
+                              <span class="txt">공연/전시</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">연극</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">유료</span>
+                            </div>
+                          </div>
+                          <div class="box-txt">
+                            <strong class="txt-tit">지원의 음악과 미술이 함께하는 콘서트</strong>
+                            <p class="txt-desc">무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의</p>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="swiper-slide">
+                        <a href="#none">
+                          <div class="box-thumb">
+                            <img class="thumb-img" src="https://placeimg.com/290/413/nature" alt="">
+                            <div class="thumb-category">
+                              <i class="ico-houseout">
+                                <span class="hide-txt">집밖</span>
+                              </i>
+                            </div>
+                            <div class="thumb-btn">
+                              <span class="txt">예매 바로가기</span>
+                            </div>
+                          </div>
+                          <div class="box-tag">
+                            <div class="tag type01">
+                              <span class="txt">공연/전시</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">연극</span>
+                            </div>
+                          </div>
+                          <div class="box-txt">
+                            <strong class="txt-tit">춤추는 DNA</strong>
+                            <p class="txt-desc"></p>
+                            <dl class="txt-data">
+                              <dt class="data-term">기간 </dt>
+                              <dd class="data-desc">2022.09.21~ 2022.09.25</dd>
+                              <dt class="data-term">문의</dt>
+                              <dd class="data-desc">02-360-866</dd>
+                            </dl>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="swiper-slide">
+                        <a href="#none">
+                          <div class="box-thumb">
+                            <img class="thumb-img" src="https://placeimg.com/290/413/nature" alt="">
+                            <div class="thumb-category">
+                              <i class="ico-housein">
+                                <span class="hide-txt">집콕</span>
+                              </i>
+                            </div>
+                            <div class="thumb-btn">
+                              <span class="txt">예매 바로가기</span>
+                            </div>
+                          </div>
+                          <div class="box-tag">
+                            <div class="tag type01">
+                              <span class="txt">공연/전시</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">연극</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">유료</span>
+                            </div>
+                          </div>
+                          <div class="box-txt">
+                            <strong class="txt-tit">지원의 음악과 미술이 함께하는 콘서트</strong>
+                            <p class="txt-desc">무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의</p>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="swiper-slide">
+                        <a href="#none">
+                          <div class="box-thumb">
+                            <img class="thumb-img" src="https://placeimg.com/290/413/nature" alt="">
+                            <div class="thumb-category">
+                              <i class="ico-houseout">
+                                <span class="hide-txt">집밖</span>
+                              </i>
+                            </div>
+                            <div class="thumb-btn">
+                              <span class="txt">예매 바로가기</span>
+                            </div>
+                          </div>
+                          <div class="box-tag">
+                            <div class="tag type01">
+                              <span class="txt">공연/전시</span>
+                            </div>
+                            <div class="tag type01">
+                              <span class="txt">연극</span>
+                            </div>
+                          </div>
+                          <div class="box-txt">
+                            <strong class="txt-tit">지원의 음악과 미술이 함께하는 콘서트</strong>
+                            <p class="txt-desc"></p>
+                            <dl class="txt-data">
+                              <dt class="data-term">기간 </dt>
+                              <dd class="data-desc">2022.09.21~ 2022.09.25</dd>
+                              <dt class="data-term">문의</dt>
+                              <dd class="data-desc">02-360-866</dd>
+                            </dl>
+                          </div>
+                        </a>
+                      </li>
+                    </ul>
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -125,6 +375,28 @@
   <div class="dimm">
     <img src="/images/common/blank_size_100.png" alt="">
   </div>
+  <script>
+    var swiper = new Swiper('.main-home-swiper .swiper-container', {
+      slidesPerView: 2,
+      spaceBetween: 10,
+      watchOverflow: true,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+      breakpoints: {
+        1025: {
+          slidesPerView: 4,
+          spaceBetween: 40,
+        },
+      }
+    });
+
+  </script>
 </body>
 
 </html>
