--- a/www/html/oneeye/oneEyeList.html
+++ b/www/html/oneeye/oneEyeList.html
@@ -73,10 +73,13 @@
                   <a href="#">홈</a>
                 </li>
                 <li>
-                  <a href="#">문화체험</a>
+                  <a href="#">문화공감</a>
                 </li>
                 <li>
-                  <a class="on" href="#">집콕+집밖 문화생활</a>
+                  <a href="#">문화TV</a>
+                </li>
+                <li>
+                  <a class="on" href="#">공감리포트</a>
                 </li>
               </ol>
             </div>
@@ -112,6 +115,9 @@
                 </div>
               </div>
             </div>
+          </section>
+          <section class="life-section">
+            <div class="section-inner"></div>
           </section>
         </div>
       </div>
